tests/data/iptables-save-Smeagol-correct
# Created by Firelet for host Smeagol
*filter
-A FORWARD -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT  -p tcp -s 10.66.2.2 -d 10.66.1.3 --dport 6660:6669 -j ACCEPT
-A INPUT  -p udp -s 172.16.2.223 -d 10.66.1.3 --dport 123 -j ACCEPT
-A INPUT  -p udp -s 10.66.2.2 -d 10.66.1.3 --dport 123 -j ACCEPT
-A INPUT -i eth0  -j LOG --log-level 1 --log-prefix default
-A INPUT  -j DROP
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT  -s 10.66.1.3 -d 10.66.1.1 -j LOG --log-level 3 --log-prefix NoSmeagol
-A OUTPUT  -s 10.66.1.3 -d 10.66.1.1 -j DROP
-A OUTPUT  -p tcp -s 10.66.1.3 -d 10.66.1.2 -m multiport --dport 143,585,993 -j LOG --log-level 2 --log-prefix imap
-A OUTPUT  -p tcp -s 10.66.1.3 -d 10.66.1.2 -m multiport --dport 143,585,993 -j ACCEPT
-A OUTPUT  -p udp -s 10.66.1.3 -d 172.16.2.223 --dport 123 -j ACCEPT
-A OUTPUT  -j LOG --log-level 1 --log-prefix default
-A OUTPUT  -j DROP
COMMIT
